# aws-serverless-examples

./: README.md  pyproject.toml  setup.py.DEPRECATED
aws_serverless_examples/: __main__.py
aws_serverless_examples/sns/: __init__.py  sns_publisher.py  sns_subscriber.py
