[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
# name of the project. can be anything, it doesn't have to be name of the module.
name = "aws_serverless_examples" 
description = "examples of aws serverless usages"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3"
]

[project.scripts]
# any_name_for_script = "my_package.module:function" where my_package is name of the folder path containing __main__
serverless_example = "aws_serverless_examples.__main__:main"